:beetle: Fix parcoords resizing when scrollbar is present

--- a/gui/css/csp-volume-rendering.css
+++ b/gui/css/csp-volume-rendering.css
@@ -54,3 +54,7 @@
     width: 100% !important;
     height: 100% !important;
 }
+
+.parcoordsControls {
+    max-width: 400px;
+}
